Project files updated

--- a/Investigate_a_Dataset.ipynb
+++ b/Investigate_a_Dataset.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Project: TMDB Movie Data Analysis\n",
+    "# Project: IMDB Movie Data Analysis\n",
     "\n",
     "## Table of Contents\n",
     "<ul>\n",
@@ -22,7 +22,7 @@
     "<a id='intro'></a>\n",
     "## Introduction\n",
     "\n",
-    "I have selected the TMDB Movie dataset for analysis. This data set contains information about 10,000 movies collected from The Movie Database (TMDb), including user ratings and revenue."
+    "I have selected the IMDB Movie dataset for analysis. This data set contains information about 10,000 movies collected from The Movie Database (IMDb), including user ratings and revenue."
    ]
   },
   {
@@ -2956,13 +2956,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "TMDB movie data contains vast amount of information that defines a movie. However I thought that it is also essential to extract the knowledge about the factors influencing a movie success. so I started analysing the important features in the data to understand the different features related to a movie and get a final summary from it. Hence I started my analysis with analysing features like release year, genres and popularity and I found out that popularity for the genres was increasing among the years but the popularity stayed below 10 for most of the time. Moreover, I also looked up for the features that is helping the movies to gain a better revenue. Next I moved onto perform my analysis on features like revenue, director, movie title and release year and it looks like revenue obtained by the movies increased and highest revenue obatained over the years stayed mostly below 1 billion dollars. Furthermore, I expanded my analysis on to finding the maximum profits earned by the movies and it appeared that profits also got increased over the years and stayed below 1 billion dollars for most part of the years. Finally, I concluded with performing my analysis on how the movie runtimes of movies changed over the years and it clearly looks like run time for the movies gradually reduced over the years and it also seemed to be like more movies had a runtime of less than 110 minutes."
+    "IMDB movie data contains vast amount of information that defines a movie. However I thought that it is also essential to extract the knowledge about the factors influencing a movie success. so I started analysing the important features in the data to understand the different features related to a movie and get a final summary from it. Hence I started my analysis with analysing features like release year, genres and popularity and I found out that popularity for the genres was increasing among the years but the popularity stayed below 10 for most of the time. Moreover, I also looked up for the features that is helping the movies to gain a better revenue. Next I moved onto perform my analysis on features like revenue, director, movie title and release year and it looks like revenue obtained by the movies increased and highest revenue obatained over the years stayed mostly below 1 billion dollars. Furthermore, I expanded my analysis on to finding the maximum profits earned by the movies and it appeared that profits also got increased over the years and stayed below 1 billion dollars for most part of the years. Finally, I concluded with performing my analysis on how the movie runtimes of movies changed over the years and it clearly looks like run time for the movies gradually reduced over the years and it also seemed to be like more movies had a runtime of less than 110 minutes."
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -2976,7 +2976,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
